# toy-blog

./: .env  .gitignore  Cargo.toml  README.md  out
src/: controllers.rs  lib.rs  models.rs  show_posts.rs  views.rs
templates/: index.html.tera
